--- a/src/zeit/web/site/templates/inc/parquet/parquet-spektrum.html
+++ b/src/zeit/web/site/templates/inc/parquet/parquet-spektrum.html
@@ -1,6 +1,6 @@
 <div class="parquet-row parquet-row--spektrum" id="parquet-spektrum">
     <div class="parquet-meta">
-        <a class="parquet-meta__title parquet-meta__title--spektrum" href="http://spektrum.de"><span class="parquet-meta__logo parquet-meta__logo--spektrum icon-logo-spektrum">Spektrum.de</span></a>
+        <a class="parquet-meta__title parquet-meta__title--spektrum" href="http://www.spektrum.de"><span class="parquet-meta__logo parquet-meta__logo--spektrum icon-logo-spektrum">Spektrum.de</span></a>
         <ul class="parquet-meta__topic-links parquet-meta__topic-links--spektrum">
             <li>
                 <a href="http://www.spektrum.de/astronomie" class="parquet-meta__topic-link">Astronomie</a>
@@ -14,7 +14,7 @@
         </ul>
         <div class="parquet-meta__more parquet-meta__more--spektrum">
             Aktuelles aus der Welt von Wissenschaft und Forschung:
-            <a href="http://www.zeit.de/index" class="parquet-meta__more-link parquet-meta__more-link--spektrum">
+            <a href="http://www.spektrum.de" class="parquet-meta__more-link parquet-meta__more-link--spektrum">
                 Spektrum.de
             </a>
         </div>
