--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -36,6 +36,7 @@
 @import "modules/snapshot"
 // videobar
 @import "modules/videobar"
+@import "modules/video-thumbnail"
 @import "modules/video-stage-heading"
 @import "modules/video-stage-main"
 @import "modules/video-stage-secondary"
