--- a/src/zeit/web/site/templates/inc/cp_area_printbox.html
+++ b/src/zeit/web/site/templates/inc/cp_area_printbox.html
@@ -38,7 +38,7 @@
         <a href="{{ box.url }}?wt_zmc=fix.int.zonpme.zeitde.angebbox.angebseite.bildtext.headline.headline&amp;utm_medium=fix&amp;utm_source=zeitde_zonpme_int&amp;utm_campaign=angebbox&amp;utm_content=angebseite_bildtext_headline_headline" title="{{ box.title }}">
             <h2 class="print-box__title">{{ box.title }}</h2>
         </a>
-        <a href="{{ box.url }}?wt_zmc=fix.int.zonpme.zeitde.angebbox.angebseite.bildtext.cover.cover&utm_medium=fix&utm_source=zeitde_zonpme_int&utm_campaign=angebbox&utm_content=angebseite_bildtext_cover_cover" title="{{ box.title }}">
+        <a href="{{ box.url }}?wt_zmc=fix.int.zonpme.zeitde.angebbox.angebseite.bildtext.cover.cover&amp;utm_medium=fix&amp;utm_source=zeitde_zonpme_int&amp;utm_campaign=angebbox&amp;utm_content=angebseite_bildtext_cover_cover" title="{{ box.title }}">
             <img class="print-box__media-item" src="{{ box.image | default_image_url('zon-printbox') }}">
         </a>
         <a href="{{ box.url }}?wt_zmc=fix.int.zonpme.zeitde.angebbox.angebseite.bildtext.text.text&amp;utm_medium=fix&amp;utm_source=zeitde_zonpme_int&amp;utm_campaign=angebbox&amp;utm_content=angebseite_bildtext_text_text" title="{{ box.title }}">
