--- a/sass/_mixins.sass
+++ b/sass/_mixins.sass
@@ -208,6 +208,35 @@
 	@if $display == inline-block or $display == inline
 		vertical-align: $vertical-align
 
+=zon-button($background-color, $hover-background-color, $border-color, $hover-border-color, $color, $hover-color, $visited-color, $font-size, $margin, $padding)
+	background-color: $background-color
+	border-radius: 5px
+	border: 2px solid $border-color
+	color: $color
+	display: inline-block
+	font-size: $font-size
+	font-weight: bold
+	letter-spacing: 0.05em
+	margin: $margin
+	padding: $padding
+	text-align: center
+	text-transform: uppercase
+	+single-transition(all, 0.15s, ease-in-out)
+	&:hover
+		background-color: $hover-background-color
+		border: 2px solid $hover-border-color
+		color: $hover-color
+		cursor: pointer
+
+	&:visited
+		color: $visited-color
+
+=zon-button-dark
+	+zon-button(rgba(0,0,0, 0.2), rgba(0,0,0, 0.5), $zon_mid_grey, $zon-alto, $zon_lighter_grey, $white, $zon-alto, remify(13px), remify($little--px $tiny--px), remify($fine--px $small--px))
+
+=zon-button-light
+	+zon-button(rgba(255,255,255, 0.5), rgba(255,255,255, 0.8), $zon_light_grey, $zon_mid_grey, $grey--mid-dark, $black, $zon-charcoal, remify(13px), remify($little--px $tiny--px), remify($fine--px $small--px))
+
 // pseudo classes
 %off-screen
 	height: 1px
