ZON-1296: add video title padding constant

--- a/sass/web.site/_constants.sass
+++ b/sass/web.site/_constants.sass
@@ -78,3 +78,5 @@ $zon-bar-height-phablet: em($zon-bar-height-phablet-px)
 
 // margins
 $page-padding: remify($petite--px)
+$video-title-padding--px: 15px
+$video-title-padding: remify($video-title-padding--px)
