--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -33,13 +33,19 @@
 @import "modules/teaser-parquet-large"
 @import "modules/teaser-printbox"
 @import "modules/teaser-beta"
+// snapshot
 @import "modules/snapshot"
 // videobar
-@import "modules/videobar"
-@import "modules/video-thumbnail"
+@import "modules/video-stage"
 @import "modules/video-stage-heading"
 @import "modules/video-stage-main"
+@import "modules/video-large"
+@import "modules/video-thumbnail"
+@import "modules/video-text-playbutton"
+@import "modules/video-large-title"
 @import "modules/video-stage-secondary"
+@import "modules/video-stage-footer"
+@import "modules/video-centerpage-link"
 
 // ads
 @import "modules/adplaces"
