ZON-1332: Basic styles for comment section

--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -19,6 +19,7 @@
 @import "modules/main"
 @import "modules/footer"
 @import "modules/parquet"
+@import "modules/comments"
 @import "modules/page"
 @import "modules/teasers"
 @import "modules/teaser"
