--- a/src/zeit/web/site/templates/article.html
+++ b/src/zeit/web/site/templates/article.html
@@ -38,5 +38,26 @@
                 {% endif %}
             {% endblock article_pagination %}
         </div>
+        <div class="comment-section">
+            <span class="comment-section__head">
+                Diskutieren Sie mit.
+            </span>
+            <div class="comment-section__comments">
+                {% if view.comments %}
+                    {% for comment in view.comments.comments[:20] %}
+                        <article class="comment{% if comment.indented %} comment--indented{% endif %}" id="{{ comment.cid }}">
+                            <a class="comment__name" href="{{ comment.userprofile_url }}">{{ comment.name | e }}</a>
+                            <span  class="comment__date">{{ comment.timestamp | format_date_ago() }}</span>
+                            <a  class="comment__anchor" href="#{{ comment.cid }}">Kommentar #{{ loop.index }}</a>
+                            <div class="comment__body">{{ comment.text | safe }}</div>
+                        </article>
+                    {% endfor %}
+                {% else %}
+                    <span class="comment-section__notice">
+                        Noch keine Kommentare.
+                    </span>
+                {% endif %}
+            </div>
+        </div>
     </article>
 {% endblock main %}
