--- a/sass/web.site/modules/video/_video-large-title.sass
+++ b/sass/web.site/modules/video/_video-large-title.sass
@@ -1,15 +1,13 @@
 .video-large-title
-	bottom: $video-title-padding
+	bottom: remify(40px)
 	left: $video-title-padding
-	margin: 0 $video-title-padding 1em 0
+	margin: 0
 	position: absolute
 	z-index: 2
 	+respond-min($break-phablet-min)
-		bottom: remify(42px)
+		bottom: remify(66px)
 	+respond-min($break-desktop-min)
-		bottom: auto
-		left: auto
-		position: relative
+		bottom: remify(-66px)
 	&__kicker
 		display: block
 		font-size: remify(14px)
@@ -23,3 +21,5 @@
 			font-size: remify(20px)
 		+respond-min($break-tablet-min)
 			font-size: remify(22px)
+	
+	
