--- a/sass/web.site/modules/video/_video-large.sass
+++ b/sass/web.site/modules/video/_video-large.sass
@@ -1,8 +1,9 @@
 .video-large
+	+respond-min($break-desktop-min)
+		padding-bottom: remify(-66px)
 	&__combined-link
+		+link
+			color: $white
+	&__container
 		display: block
 		position: relative
-
-.video-large__combined-link
-	+link
-		color: $white
