ZON-1296: Style small video teaser

--- a/sass/web.site/modules/video/_video-small.sass
+++ b/sass/web.site/modules/video/_video-small.sass
@@ -1,6 +1,4 @@
-.video-large
-	+respond-min($break-desktop-min)
-		padding-bottom: remify(66px)
+.video-small
 	&__combined-link
 		+link
 			color: $white
