--- a/sass/web.site/modules/video/_video-stage-secondary.sass
+++ b/sass/web.site/modules/video/_video-stage-secondary.sass
@@ -33,4 +33,5 @@
 		display: inline-block
 		width: 31.5%
 	+respond-min($break-desktop-min)
-		width: auto
+		display: block !important
+		width: 100%
