--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -44,6 +44,8 @@
 @import "modules/video/video-text-playbutton"
 @import "modules/video/video-large-title"
 @import "modules/video/video-stage-secondary"
+@import "modules/video/video-small"
+@import "modules/video/video-small-title"
 @import "modules/video/video-stage-footer"
 @import "modules/video/video-centerpage-link"
 
