--- a/sass/web.site/modules/video/_video-text-playbutton.sass
+++ b/sass/web.site/modules/video/_video-text-playbutton.sass
@@ -1,10 +1,6 @@
 .video-text-playbutton
-	bottom: $video-title-padding
-	color: #777
+	color: lighten(#777, 20%)
 	font-size: remify(14px)
-	left: $video-title-padding
-	position: absolute
-	z-index: 2
 	&:before
 		content: '\25B6' // ▶ = Black right-pointing triangle
 		font-size: 90%
@@ -12,14 +8,21 @@
 		vertical-align: middle
 	&__text
 		display: none
-		font-weight: bold
-		letter-spacing: 0.05em
-		text-transform: uppercase
-		+respond-min($break-phablet-min)
-			display: inline
-			padding: 0 remify(4px) 0 0
+		&--block
+			font-weight: bold
+			letter-spacing: 0.05em
+			text-transform: uppercase
+			+respond-min($break-phablet-min)
+				display: inline
+				padding: 0 remify(4px) 0 0
 	&--block
+		bottom: $video-title-padding
+		left: $video-title-padding
+		position: absolute
+		z-index: 2
 		+respond-min($break-phablet-min)
 			color: $white
 			+zon-button-dark
 			margin: 0
+	&--inline
+		display: inline
