--- a/sass/web.site/modules/video/_video-stage-secondary.sass
+++ b/sass/web.site/modules/video/_video-stage-secondary.sass
@@ -6,7 +6,8 @@
 	+respond-min($break-desktop-min)
 		background-color: #28282e
 		display: table-cell
-		padding: 0 remify(20px)
+		padding: remify(70px) remify(20px) 0 remify(20px)
+		position: relative
 		vertical-align: top
 		width: remify(280px + 20px +20px)
 
@@ -16,22 +17,9 @@
 			color: #BCBCBC
 			display: block
 			font-size: remify(14px)
-			text-transform: uppercase
+			left: remify(20px)
 			letter-spacing: 0.05em
-			margin: $page-padding 0
-
-
-.video-small
-	display: none
-	+respond-min($break-phablet-min)
-		width: 48%
-		&:nth-child(2),
-		&:nth-child(3)
-			// first-child is .video-stage-secondary__title, so it's all off by one
-			display: inline-block
-	+respond-min($break-tablet-min)
-		display: inline-block
-		width: 31.5%
-	+respond-min($break-desktop-min)
-		display: block !important
-		width: 100%
+			margin: 0
+			position: absolute
+			text-transform: uppercase
+			top: remify(26px)
