--- a/sass/web.site/modules/video/_video-stage.sass
+++ b/sass/web.site/modules/video/_video-stage.sass
@@ -1,9 +1,10 @@
 .video-stage
 	background-color: #33333A
-	margin: 0 (-$page-padding) remify($small--px) (-$page-padding)
-	padding: 0 $page-padding
-	font-family: $font-tabletgothic
 	color: $grey--light
+	font-family: $font-tabletgothic
+	margin: 0 (-$page-padding) remify($small--px) (-$page-padding)
+	overflow: hidden
+	padding: 0 $page-padding
 	+respond-min($break-desktop-min)
 		padding-right: 0
 		position: relative
