BUG-79: use constants for max-width and consider screen width and offset for right Ad

--- a/sass/web.magazin/modules/_iqd_adcode.sass
+++ b/sass/web.magazin/modules/_iqd_adcode.sass
@@ -1,7 +1,7 @@
 #iqd_mainAd
     margin-bottom: 0
 #iqd_align_Ad
-    width: 61.25em
+    max-width: $max-page-width
     margin: 0 auto
 #iqd_topAd
     padding: 0
@@ -9,14 +9,16 @@
 #iqd_rightAd
     position: absolute
     bottom: -630px
-    left: 980px
+    left: $max-page-width
     width: 160px
+    +respond-max($max-page-width)
+        display: none
 #iqadtile1
     padding-left: 20px
 .content .wrapper
-    max-width: 61.25em
-    padding-left: 1.25em
-    padding-right: 1.25em
+    max-width: $max-page-width
+    padding-left: $page-padding
+    padding-right: $page-padding
     margin-left: auto
     margin-right: auto
     border: 2px solid red
