BUG-76: remove img sizing in ad places
Bug importance: 0.001, therefore please put it in the normal release process.

--- a/sass/web.site/modules/_defaults.sass
+++ b/sass/web.site/modules/_defaults.sass
@@ -15,6 +15,10 @@ img
 	height: auto
 	max-width: 100%
 
+*[id^='iqadtile'] noscript img
+	width: auto !important
+	height: auto !important
+
 a
 	+link-colors($color-link--default, $color-link--hover, $color-link--hover, $color-link--default, $color-link--hover)
 	text-decoration: none
