--- a/sass/web.magazin/base/_defaults.sass
+++ b/sass/web.magazin/base/_defaults.sass
@@ -1,8 +1,6 @@
 *
     +box-sizing(border-box)
 
-html
-
 body
     font-family: $article-body-font
     font-size: $font-m
@@ -15,6 +13,10 @@ img
     max-width: 100%
     height: auto
     display: block
+
+*[id^='iqadtile'] noscript img
+    width: auto !important
+    height: auto !important
 
 a
     +link-colors($color-link--default, $color-link--hover, $color-link--hover, $color-link--default, $color-link--hover)
