ZON-1296: Add styles for footer and finalize

--- a/sass/web.site/modules/video/_video-centerpage-link.sass
+++ b/sass/web.site/modules/video/_video-centerpage-link.sass
@@ -1,9 +1,9 @@
 .video-centerpage-link
-	+link
-		color: inherit
-		text-decoration: none
-	text-transform: uppercase
-	font-size: remify(16px)
-	background-color: lighten(#33333A, 20%)
-	display: inline-block
-	margin: remify($small--px) auto
+	+zon-button-dark
+	margin: 0 0 $page-padding 0
+	width: 100%
+	+respond-min($break-phablet-min)
+		position: absolute
+		right: $page-padding
+		top: remify(14px)
+		width: remify(140px)
