--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -47,6 +47,7 @@
 @import "modules/video/video-small"
 @import "modules/video/video-small-title"
 @import "modules/video/video-stage-footer"
+@import "modules/video/video-series"
 @import "modules/video/video-centerpage-link"
 
 // ads
