--- a/src/zeit/web/site/templates/inc/cp_area_videobar.html
+++ b/src/zeit/web/site/templates/inc/cp_area_videobar.html
@@ -19,7 +19,7 @@
     <footer class="video-stage-footer">
         <div class="video-series">
             <!-- ist so nicht accessible umzusetzen, ohne js auch nicht bedienbar -->
-            <label for="video_series_select" class="video-series__label">Videoserien</label>
+            <label for="series_select" class="video-series__label">Videoserien</label>
             <select id="series_select" class="video-series__select" name="serie">
                 <option>Bitte auswählen</option>
                 <option data-url="utopien" value="Utopien">Utopien</option>
