--- a/sass/web.site/modules/video/_video-stage-heading.sass
+++ b/sass/web.site/modules/video/_video-stage-heading.sass
@@ -1,12 +1,12 @@
 .video-stage-heading
 	color: #eee
-	display: inline-block
+	display: block
 	font-size: remify(18px)
 	font-weight: bold
 	letter-spacing: 0.05em
 	line-height: 1.125
 	text-align: center
-	margin: 0
+	margin: 0 auto
 	padding: remify($small--px) 0
 	-webkit-font-smoothing: antialiased
 	+respond-min($break-phablet-min)
