--- a/sass/web.site/modules/video/_video-stage-secondary.sass
+++ b/sass/web.site/modules/video/_video-stage-secondary.sass
@@ -3,6 +3,7 @@
 	+respond-min($break-phablet-min)
 		+justify-children-horizontally('.video-small', top)
 		display: block
+		margin-bottom: (-$page-padding)
 	+respond-min($break-desktop-min)
 		background-color: #28282e
 		display: table-cell
