--- a/sass/web.site/modules/video/_video-thumbnail.sass
+++ b/sass/web.site/modules/video/_video-thumbnail.sass
@@ -1,5 +1,5 @@
 .video-thumbnail
-	margin: 0 (-$page-padding) $page-padding (-$page-padding)
+	margin: 0 (-$page-padding) 0(-$page-padding)
 	+teaser-image-dark-overlay
 	+respond-min($break-phablet-min)
-		margin: 0 0 $page-padding 0
+		margin: 0
