ZON-1270: Polish HP CSS

--- a/sass/web.site/modules/_teaser-beta.sass
+++ b/sass/web.site/modules/_teaser-beta.sass
@@ -42,7 +42,7 @@
 		background-color: rgba(255,255,255, 0.5)
 		border-radius: 5px
 		border: 2px solid $zon_light_grey
-		color: $grey--mid-dark
+		color: $zon-charcoal
 		display: inline-block
 		font-size: remify(13px)
 		font-weight: bold
