--- a/sass/web.site/modules/_teaser-parquet-large.sass
+++ b/sass/web.site/modules/_teaser-parquet-large.sass
@@ -34,8 +34,7 @@
 	&__byline
 		@extend %teaser-byline
 	&__metadata
-		@extend %teaser-byline // no accident
-		margin-bottom: 0
+		@extend %teaser-metadata
 	&__commentcount
 		@extend %teaser-commentcount
 	&__datetime
