--- a/sass/web.site/modules/_teaser-small.sass
+++ b/sass/web.site/modules/_teaser-small.sass
@@ -20,7 +20,7 @@
 	&__byline
 		@extend %teaser-byline
 	&__metadata
-		@extend %teaser-byline
+		@extend %teaser-metadata
 	&__datetime
 		@extend %teaser-datetime
 	&__commentcount
