--- a/sass/web.site/modules/_adplaces.sass
+++ b/sass/web.site/modules/_adplaces.sass
@@ -4,7 +4,7 @@ $mobile_middle_ad_break_left_margin: $mobile_ad_width + $page-padding--small*2
 
 // extend these please
 %ad__label
-	color: $charcoal
+	color: $zon-charcoal
 	font-family: $font-tabletgothic
 	font-size: $font-xxs
 	letter-spacing: 2px
@@ -13,11 +13,11 @@ $mobile_middle_ad_break_left_margin: $mobile_ad_width + $page-padding--small*2
 
 %ad__mr
 	background-color: $white
-	color: $charcoal
+	color: $zon-charcoal
 	margin: $large auto
 	+respond-min($break-1)
-		border-top: 1px solid $charcoal
-		border-bottom: 1px solid $charcoal
+		border-top: 1px solid $zon-charcoal
+		border-bottom: 1px solid $zon-charcoal
 		max-width: 41.25rem
 		padding: $small 0
 	+respond-min($break-3)
