--- a/sass/web.site/modules/_teaser-column.sass
+++ b/sass/web.site/modules/_teaser-column.sass
@@ -1,40 +1,43 @@
 // teaser__column.sass
 // Styles for the so-called "Kolumnenteaser"
 
+$color-column-background: $zon-warm-grey
+$color-column-shadow: $zon-warm-dark-grey
+$teaser-column-shadow: 50px
+$teaser-column-mobile-image-size: 80px
+
 .teaser-column
 	@extend %teaser
 	background: $color-column-background
 	border-top: none
-	padding: $teaser-column-shadow $petite $petite $petite
-	margin: $teaser-column-topmargin 0 $petite 0
-	margin-left: -$page-padding
-	margin-right: -$page-padding
+	padding:   $petite $petite $petite
+	margin: 40px -$page-padding $petite -$page-padding
 	position: relative
-	+single-box-shadow(0, $teaser-column-shadow, 0, 0, $color-column-shadow, true)
+	+box-shadow(inset 0 $teaser-column-shadow 0 0 $color-column-shadow)
 	+respond-min($break-tablet-min)
 		margin-left: 0
 		margin-right: 0
 	+respond-min($break-desktop-min)
-		+single-box-shadow(0, 0, 0, 0, $color-column-background)
+		+box-shadow(none)
 		margin: $petite 0 $petite 0
 		padding: $petite $petite $petite ($teaser-image-desktop-width + $petite)
 	&__media
-		height: $teaser-column-mobile-image-size
-		left: 0
-		margin: 0
 		overflow: hidden
 		position: absolute
 		top: -($teaser-column-mobile-image-size - $teaser-column-shadow)
+		left: 0
 		width: $teaser-column-mobile-image-size
+		height: $teaser-column-mobile-image-size
+		margin: 0
 		+respond-min($break-desktop-min)
-			bottom: 0
-			height: 100%
-			left: 0
 			overflow: hidden
 			position: absolute
-			right: 60%
 			top: 0
+			right: 60%
+			bottom: 0
+			left: 0
 			width: 40%
+			height: 100%
 	&__media-item
 		@extend %teaser-media-item
 	&__heading
@@ -48,10 +51,9 @@
 	&__series
 		letter-spacing: $zon-letter-spacing-l
 		display: inline-block
-		font-family: $font-tabletgothic
 		font-size: $font-xs--rem
 		font-weight: bold
-		left: $teaser-column-series-position
+		left: 100px
 		position: absolute
 		text-transform: uppercase
 		top: $small
@@ -74,17 +76,10 @@
 			display: inline
 	&__title
 		@extend %teaser-title
-		+respond-min($break-desktop-min)
-			font-size: rem($font-xl--px - 1)
 	&__text
 		@extend %teaser-text
 	&__byline
-		color: $grey
-		font-family: TabletGothic
-		font-size: 14px
-		font-style: normal
-		font-weight: 200
-		margin-bottom: 0
+		@extend %teaser-byline
 	&__metadata
 		@extend %teaser-metadata
 	&__datetime
@@ -94,7 +89,7 @@
 	&__kicker-container
 		+respond-min($break-desktop-min)
 			display: block
-			margin-bottom: em(4px, $font-s--px)
+			margin-bottom: remify(4px)
 
 // prevent next teaser from having border
 .teaser-column + .teaser // deprecated
