--- a/sass/web.site/modules/_teaser-large.sass
+++ b/sass/web.site/modules/_teaser-large.sass
@@ -2,12 +2,15 @@
 	@extend %teaser
 	&__heading
 		@extend %teaser-heading
+		margin-bottom: remify(14px)
 	&__combined-link
 		@extend %teaser-combined-link
 	&__kicker
 		@extend %teaser-kicker
+		margin-bottom: remify(8px)
 	&__title
 		@extend %teaser-title
+		font-size: $font-mxxl
 	&__media
 		@extend %teaser-media
 	&__media-item
@@ -17,7 +20,7 @@
 	&__byline
 		@extend %teaser-byline
 	&__metadata
-		@extend %teaser-byline
+		@extend %teaser-metadata
 	&__commentcount
 		@extend %teaser-commentcount
 	&__datetime
