ZON-1296: add URL

--- a/src/zeit/web/site/templates/inc/cp_area_videobar.html
+++ b/src/zeit/web/site/templates/inc/cp_area_videobar.html
@@ -49,6 +49,6 @@
             </select>
         </div>
         <!-- sind doch gar nicht alle Videos? -->
-        <a class="video-centerpage-link" href="http://www.zeit.de/video">Alle Videos</a>
+        <a class="video-centerpage-link" href="{{'http://xml.zeit.de/video'| translate_url}}">Alle Videos</a>
     </footer>
 </section>
