--- a/src/zeit/web/site/templates/inc/cp_area_printbox.html
+++ b/src/zeit/web/site/templates/inc/cp_area_printbox.html
@@ -1,6 +1,28 @@
 {% set box = view.area_printbox -%}
 
-{% if box.has_digital_ad == False -%}
+{% if box.has_digital_ad -%}
+<aside class="print-box print-box--angebot">
+    <div class="print-box__heading">
+        {{ box.supertitle }}
+    </div>
+    <div class="print-box__content">
+            <a class="print-box__title" href="{{ box.url }}?wt_zmc=fix.int.zonpme.zeitde.angebbox.angebseite.bildtext.headline.headline&amp;utm_medium=fix&amp;utm_source=zeitde_zonpme_int&amp;utm_campaign=angebbox&amp;utm_content=angebseite_bildtext_headline_headline" title="{{ box.title }}">{{ box.title }}</a>
+        <figure class="print-box__media">
+            <a href="{{ box.url }}?wt_zmc=fix.int.zonpme.zeitde.angebbox.angebseite.bildtext.cover.cover&amp;utm_medium=fix&amp;utm_source=zeitde_zonpme_int&amp;utm_campaign=angebbox&amp;utm_content=angebseite_bildtext_cover_cover" title="{{ box.title }}">
+                <img class="print-box__media-item" src="{{ box.image | default_image_url('zon-printbox') }}">
+            </a>
+        </figure>
+        <div class="print-box__container">
+            <a href="{{ box.url }}?wt_zmc=fix.int.zonpme.zeitde.angebbox.angebseite.bildtext.text.text&amp;utm_medium=fix&amp;utm_source=zeitde_zonpme_int&amp;utm_campaign=angebbox&amp;utm_content=angebseite_bildtext_text_text" title="{{ box.title }}">
+                <p class="print-box__text">{{ box.subtitle }}</p>
+            </a>
+            <a href="{{ box.url }}?wt_zmc=fix.int.zonpme.zeitde.angebbox.angebseite.bildtext.button.button&amp;utm_medium=fix&amp;utm_source=zeitde_zonpme_int&amp;utm_campaign=angebbox&amp;utm_content=angebseite_bildtext_button_button">
+                <span class="print-box__button">Test-Zugang sichern</span>
+            </a>
+        </div>
+    </div>
+</aside>
+{% else -%}
 <aside class="print-box">
     {% set title = box.supertitle + ' - ' + box.title -%}
     <div class="print-box__heading">
@@ -29,28 +51,6 @@
             </a>
             <a href="http://leserservice.zeit.de/diesewoche/DIE-ZEIT-kostenlos-testen/index.php?r=npb" id="intern.box.zeitde.fix.probe.homepage.leserservice.text.cross" class="print-box__link">
                 Testen Sie 3 Wochen die gedruckte ZEIT
-            </a>
-        </div>
-    </div>
-</aside>
-{% else -%}
-<aside class="print-box print-box--angebot">
-    <div class="print-box__heading">
-        {{ box.supertitle }}
-    </div>
-    <div class="print-box__content">
-            <a class="print-box__title" href="{{ box.url }}?wt_zmc=fix.int.zonpme.zeitde.angebbox.angebseite.bildtext.headline.headline&amp;utm_medium=fix&amp;utm_source=zeitde_zonpme_int&amp;utm_campaign=angebbox&amp;utm_content=angebseite_bildtext_headline_headline" title="{{ box.title }}">{{ box.title }}</a>
-        <figure class="print-box__media">
-            <a href="{{ box.url }}?wt_zmc=fix.int.zonpme.zeitde.angebbox.angebseite.bildtext.cover.cover&amp;utm_medium=fix&amp;utm_source=zeitde_zonpme_int&amp;utm_campaign=angebbox&amp;utm_content=angebseite_bildtext_cover_cover" title="{{ box.title }}">
-                <img class="print-box__media-item" src="{{ box.image | default_image_url('zon-printbox') }}">
-            </a>
-        </figure>
-        <div class="print-box__container">
-            <a href="{{ box.url }}?wt_zmc=fix.int.zonpme.zeitde.angebbox.angebseite.bildtext.text.text&amp;utm_medium=fix&amp;utm_source=zeitde_zonpme_int&amp;utm_campaign=angebbox&amp;utm_content=angebseite_bildtext_text_text" title="{{ box.title }}">
-                <p class="print-box__text">{{ box.subtitle }}</p>
-            </a>
-            <a href="{{ box.url }}?wt_zmc=fix.int.zonpme.zeitde.angebbox.angebseite.bildtext.button.button&amp;utm_medium=fix&amp;utm_source=zeitde_zonpme_int&amp;utm_campaign=angebbox&amp;utm_content=angebseite_bildtext_button_button">
-                <span class="print-box__button">Test-Zugang sichern</span>
             </a>
         </div>
     </div>
