ZON-1369: beta: add button 'to homepage'

--- a/src/zeit/web/site/templates/beta.html
+++ b/src/zeit/web/site/templates/beta.html
@@ -22,6 +22,9 @@
                 <label class="beta-teaser__label" for="opt-out">Ich möchte die klassische Version von ZEIT&nbsp;ONLINE sehen.</label>
                 <input id="beta-toggle-submit" class="beta-teaser__button" type="submit" value="Speichern">
             </form>
+            <div class="beta-teaser__cta">
+                <a class="beta-teaser__button" href="/index">Zur Homepage</a>
+            </div>
             {% elif view.community_user.uid != "0" %}
             <span class="beta-teaser__kicker">Closed Beta</span>
             <span class="beta-teaser__title">Beta-Tester von ZEIT&nbsp;ONLINE werden</span>
