ZON-1297: Video frame player CSS

--- a/sass/web.site/modules/video/_video-large-title.sass
+++ b/sass/web.site/modules/video/_video-large-title.sass
@@ -21,5 +21,8 @@
 			font-size: remify(20px)
 		+respond-min($break-tablet-min)
 			font-size: remify(22px)
-	
+	&--playing
+		display: none
+		+respond-min($break-desktop-min)
+			display: block
 	
