--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -50,6 +50,7 @@
 @import "modules/video/video-stage-footer"
 @import "modules/video/video-series"
 @import "modules/video/video-centerpage-link"
+@import "modules/video/video-player"
 
 // ads
 @import "modules/adplaces"
