--- a/sass/web.site/modules/video/_video-large-title.sass
+++ b/sass/web.site/modules/video/_video-large-title.sass
@@ -1,8 +1,11 @@
 .video-large-title
+	background-color: rgba(0,0,0,0.25)
 	bottom: remify(40px)
+	box-shadow: 0 0px 30px 10px rgba(0, 0, 0, 0.25)
 	left: $video-title-padding
 	margin: 0
 	position: absolute
+	text-shadow: 0 1px 0 black
 	z-index: 2
 	+respond-min($break-phablet-min)
 		bottom: remify(66px)
