ZON-1297: back to gradients…

--- a/sass/web.site/modules/video/_video-small-title.sass
+++ b/sass/web.site/modules/video/_video-small-title.sass
@@ -4,6 +4,7 @@
 	line-height: 1
 	margin: 0 remify(12px) 0 0
 	position: absolute
+	text-shadow: 0 1px 0 black
 	z-index: 2
 	&__kicker
 		color: #ccc
