ZON-1297: rename 'video-bar' to 'video-stage'

--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -36,7 +36,7 @@
 @import "modules/teaser-beta"
 // snapshot
 @import "modules/snapshot"
-// videobar
+// video-stage
 @import "modules/video/video-stage"
 @import "modules/video/video-stage-heading"
 @import "modules/video/video-stage-main"
