ZON-1397: Change link color to black

--- a/sass/web.site/modules/_nav.sass
+++ b/sass/web.site/modules/_nav.sass
@@ -51,7 +51,7 @@ $zon-search-square-size: remify(35px)
 		text-transform: uppercase
 		color: $zon_grey
 		a
-			+link-colors($zon_mid_grey, $zon_dark_grey, $zon_mid_grey, $zon_mid_grey, $zon_mid_grey)
+			+link-colors($black)
 
 %main_nav__topics
 	margin: 0 0 $petite 0
