ZON-1392: start styling comments
and breakup .sass-files into separate blocks

--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -19,7 +19,6 @@
 @import "modules/main"
 @import "modules/footer"
 @import "modules/parquet"
-@import "modules/comments"
 @import "modules/page"
 // teaser
 @import "modules/teasers"
@@ -58,3 +57,7 @@
 
 // article
 @import "modules/article"
+
+// comments
+@import "modules/comments/comment-section"
+@import "modules/comments/comment"
