ZON-1397: change color to #252525 as requested by designer

--- a/sass/web.site/modules/_nav.sass
+++ b/sass/web.site/modules/_nav.sass
@@ -44,14 +44,14 @@ $zon-search-square-size: remify(35px)
 			margin-right: $little
 	width: 100%
 	a
-		+link-colors($black, $black, $black, $black, $black)
+		+link-colors($grey--mid-dark)
 	+respond-min($break-tablet-min)
 		width: auto
 		font-size: $font-xxxs
 		text-transform: uppercase
 		color: $zon_grey
 		a
-			+link-colors($black)
+			+link-colors($grey--mid-dark)
 
 %main_nav__topics
 	margin: 0 0 $petite 0
