ZON-1392: basic comment styling on mobile

--- a/sass/web.site/modules/comments/_comment-section.sass
+++ b/sass/web.site/modules/comments/_comment-section.sass
@@ -1,13 +1,13 @@
-=remove-site-padding
+=remove-side-padding
     margin-left: (-$page-padding)
     margin-right: (-$page-padding)
 
-=restore-site-padding
+=restore-side-padding
     padding-left: $page-padding
     padding-right: $page-padding
 
 .comment-section
-    +remove-site-padding
+    +remove-side-padding
 
     &__head
         font-size: 24px
