--- a/src/zeit/web/site/templates/article.html
+++ b/src/zeit/web/site/templates/article.html
@@ -38,7 +38,7 @@
                 {% endif %}
             {% endblock article_pagination %}
         </div>
-        <div class="comment-section" id="comments">
+        <section class="comment-section" id="comments">
             <span class="comment-section__head">
                 Diskutieren Sie mit.
             </span>
@@ -67,6 +67,6 @@
                     </span>
                 {% endif %}
             </div>
-        </div>
+        </section>
     </article>
 {% endblock main %}
