--- a/sass/web.site/modules/_teaser-column.sass
+++ b/sass/web.site/modules/_teaser-column.sass
@@ -69,7 +69,7 @@ $teaser-column-mobile-image-size: 80px
 			position: static
 			top: auto
 			&:after
-				content: ' ⧸ '
+				content: ' \29F8 ' // ⧸ = Big solidus
 	&__kicker
 		@extend %teaser-kicker
 		+respond-min($break-desktop-min)
