--- a/sass/web.site/modules/_teaser-printbox.sass
+++ b/sass/web.site/modules/_teaser-printbox.sass
@@ -93,8 +93,8 @@
 
 		&:hover
 			background-color: $zon_lighter_grey
-		&::after
-			content: "\25B8"
+		&:after
+			content: '\25B8' // ▸ = Black right-pointing small triangle
 			margin-left: 3px
 
 
