--- a/sass/web.site/modules/comments/_comment-section.sass
+++ b/sass/web.site/modules/comments/_comment-section.sass
@@ -10,11 +10,13 @@
     +remove-side-padding
 
     &__head
+        +restore-side-padding
         font-size: 24px
         font-weight: bold
         margin: 40px 0 0
-        padding: 20px 40px
         display: block
         border-top: 2px solid $zon-seashell
+        +respond-min($break-desktop-min)
+            padding: remify($medium--px 160px)
 
-    &__comments
+    // &__comments
